sal/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citizen-service
  labels:
    app: citizen-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: citizen-service
  template:
    metadata:
      labels:
        app: citizen-service
    spec:
      containers:
        - name: citizen-service
          image: ghcr.io/united-states-of-mekniy-and-lurk/citizen-service-api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
