sal/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citizen-admin
  labels:
    app: citizen-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: citizen-admin
  template:
    metadata:
      labels:
        app: citizen-admin
    spec:
      containers:
        - name: citizen-admin
          image: ghcr.io/united-states-of-mekniy-and-lurk/egov-suite-citizen-service-web:latest
          ports:
            - containerPort: 8080
