sal/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: citizen-service
spec:
  selector:
    app: citizen-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
