sal/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: citizen-admin
spec:
  selector:
    app: citizen-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
