sal/k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citizen-admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: citizen-admin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: citizen-admin
                port:
                  number: 80
